# classification_with_transformers

./: .gitignore  pyproject.toml
models/: rf_study.pkl  xgb_study.pkl
notebooks/: 01_text_classification.ipynb
src/transf/: config.py  preprocessing.py
