[tool.poetry]
name = "class_trans"
version = "0.1.0"
description = ""
authors = ["Borja <borjaregueral@gmail.com>"]
readme = "README.md"
packages = [{include = "transf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
seaborn = "^0.13.2"
plotly = "^5.24.0"
scikit-learn = "^1.5.1"
nltk = "^3.9.1"
sentence-transformers = "3.0.1"
transformers = ">=4.34.0,<5.0.0"
optuna = "^4.0.0"
xgboost = "^2.1.1"
imblearn = "^0.0"
numpy = "^2.1.1"
nbconvert = "^7.16.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
